@@ -188,7 +188,7 @@ namespace Mono.CSharp {
 			catch (OverflowException) {
 				Report.Error (221, loc, "Constant value `{0}' cannot be converted to a `{1}' (use `unchecked' syntax to override)",
 					GetValue ().ToString (), TypeManager.CSharpName (target_type));
-				return null;
+				return New.Constantify (target_type);
 			}
 		}
 
